<resources>
    <string name="app_name">MenuLogin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="plp">plp</string>
    <string name="hello_world">Menampilkan Data Dari Database MySQL ke Spinner</string>
    <string name="action_settings">Settings</string>


</resources>
